--- a/views/dosen/cetakRps.ejs
+++ b/views/dosen/cetakRps.ejs
@@ -33,17 +33,17 @@
                     <table class="rps-tabel" >
                       <thead>
                         <tr>
-                          <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand" /></th>
-                          <th colspan="7">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
+                          <th rowspan="4" , align="center"><img src="/images/logounand.png" alt="logounand" width="100px"/></th>
+                          <th colspan="9">RENCANA PEMBELAJARAN SEMESTER (RPS)</th>
                         </tr>
                         <tr>
-                          <th colspan="7">PROGRAM STUDI: Sistem Informasi</th>
+                          <th colspan="9">PROGRAM STUDI: Sistem Informasi</th>
                         </tr>
                         <tr>
-                          <th colspan="7">FAKULTAS/PPs: Teknologi Informasi</th>
+                          <th colspan="9">FAKULTAS/PPs: Teknologi Informasi</th>
                         </tr>
                         <tr>
-                          <th colspan="7">UNIVERSITAS ANDALAS</th>
+                          <th colspan="9">UNIVERSITAS ANDALAS</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -53,7 +53,7 @@
                           <td colspan="2">Rumpun/Kelompok MK</td>
                           <td>BOBOT(sks)</td>
                           <td>Semester</td>
-                          <td align="center">Tgl Penyusunan</td>
+                          <td align="center" colspan="3">Tgl Penyusunan</td>
                         </tr>
                         <% items.forEach((item) => { %>
               
@@ -63,14 +63,15 @@
                           <td colspan="2"></td>
                           <td><%= item.credit %></td>
                           <td><%= item.semester %></td>
-                          <td></td>
+                          <td colspan="3"></td>
                         </tr>
                         <% }) %>
                         <tr>
                           <td rowspan="2" colspan="2" class="font-weight">OTORISASI</td>
                           <td colspan="2" class="grey">Dosen Pengembang RPS</td>
-                          <td colspan="2" class="grey">Koordinator Rumpun MK</td>
-                          <td colspan="2" class="grey">KA Program Studi</td>
+                          <td colspan="3" class="grey">Koordinator Rumpun MK</td>
+                          <td colspan="3" class="grey">KA Program Studi</td>
+                        
                         </tr>
                         <tr>
                           <td colspan="2">
@@ -78,44 +79,45 @@
                           <%= res.name %>
                           <% })}) %>
                           </td>
-                          <td colspan="2"></td>
-                          <td colspan="2"></td>
+                          <td colspan="3"></td>
+                          <td colspan="3"></td>
+                          
                         </tr>
               
                         <tr>
-                          <td colspan="2" class="font-weight">Capaian Pembelajaran (CP)</td>
+                          <td colspan="10" class="font-weight">Capaian Pembelajaran (CP)</td>
                           
                         </tr>
                         <tr>
                             <td colspan="2"></td>
-                            <td colspan="7" class="grey">CP Program Studi</td>
+                            <td colspan="8" class="grey">CP Program Studi</td>
                         </tr>
                         <tr>
                           <td colspan="2" class="hidden" ></td>
                           <td>CP-1</td>
-                          <td colspan="6">Mengidentifikasi</td>
+                          <td colspan="7">Mengidentifikasi</td>
                         </tr>
     
                         <tr>
                           <td colspan="2"></td>
-                          <td colspan="7" class="grey">CP Mata Kuliah</td>
+                          <td colspan="8" class="grey">CP Mata Kuliah</td>
                         </tr>
               
                         <% items.forEach((data) => { data.course_los.forEach((res) => { %>
                         <tr>
                           <td colspan="2"></td>
                           <td><%= res.code %></td>
-                          <td colspan="6"><%= res.name %></td>
+                          <td colspan="7"><%= res.name %></td>
                         </tr>
                         <% })}) %> <% items.forEach((item) => { %>
                         <tr>
                           <td colspan="2" class="font-weight">Deskripsi Singkat Mata Kuliah</td>
-                          <td colspan="7"><%= item.description %></td>
+                          <td colspan="8"><%= item.description %></td>
                         </tr>
               
                         <tr>
                           <td colspan="2" class="font-weight">Materi Pembelajaran/Pokok Bahasan</td>
-                          <td colspan="7"><%= item.material %></td>
+                          <td colspan="8"><%= item.material %></td>
                         </tr>
               
                         <tr>
@@ -123,48 +125,48 @@
                         </tr>
                         <% }) %> <% items.forEach((data) => { data.course_plan_references.forEach((res) => { var no = 0 %>
                         <tr>
-                          <td colspan="2" class="border-bottom-0"></td>
-                          <td colspan="6"><%= res.author %>, <%= res.year %>, "<%= res.title %>", <%= res.publisher %></td>
+                          <td class="border-bottom-0"></td>
+                          <td colspan="9"><%= res.author %>, <%= res.year %>, "<%= res.title %>", <%= res.publisher %></td>
                         </tr>
                         <% })}) %>
               
                         <tr>
                           <td rowspan="8" class="font-weight">Media Pembelajaran</td>
-                          <td colspan="3" class="grey">Perangkat Lunak:</td>
-                          <td colspan="4" class="grey">Perangkat Keras:</td>
+                          <td colspan="4" class="grey">Perangkat Lunak:</td>
+                          <td colspan="5" class="grey">Perangkat Keras:</td>
                         </tr>
                         <tr>
-                          <td colspan="3">Power point</td>
-                          <td colspan="4">Projector</td>
+                          <td colspan="4">Power point</td>
+                          <td colspan="5">Projector</td>
                         </tr>
                         <tr>
-                          <td colspan="3">Code Editor</td>
-                          <td colspan="4">Laptop</td>
+                          <td colspan="4">Code Editor</td>
+                          <td colspan="5">Laptop</td>
                         </tr>
                         <tr>
-                          <td colspan="3">Browser</td>
-                          <td colspan="4"></td>
+                          <td colspan="4">Browser</td>
+                          <td colspan="5"></td>
                         </tr>
                         <tr>
-                          <td colspan="3">NodeJs</td>
-                          <td colspan="4"></td>
+                          <td colspan="4">NodeJs</td>
+                          <td colspan="5"></td>
                         </tr>
                         <tr>
-                          <td colspan="3">Rest Clien (Postman)</td>
-                          <td colspan="4"></td>
+                          <td colspan="4">Rest Clien (Postman)</td>
+                          <td colspan="5"></td>
                         </tr>
                         <tr>
-                          <td colspan="3">Database Server (MYSQL)</td>
-                          <td colspan="4"></td>
+                          <td colspan="4">Database Server (MYSQL)</td>
+                          <td colspan="5"></td>
                         </tr>
                         <tr>
-                          <td colspan="3">Version Control (GIT)</td>
-                          <td colspan="4"></td>
+                          <td colspan="4">Version Control (GIT)</td>
+                          <td colspan="5"></td>
                         </tr>
               
                         <tr>
                           <td class="font-weight">Team Teaching</td>
-                          <td colspan="7">-</td>
+                          <td colspan="9">-</td>
                         </tr>
                         <tr>
                           <td colspan="10"class="font-weight">Assessment</td>
@@ -172,22 +174,22 @@
                         <% items.forEach((data) => { data.course_plan_assessments.forEach((res) => { var no = 0 %>
                         <tr>
                           <td rowspan="1" class="border-hidden"></td>
-                          <td colspan="7" rowspan=""><%= res.name %> : <%= res.percentage %></td>
+                          <td colspan="9"><%= res.name %> : <%= res.percentage %></td>
                           <% })}) %>
                         </tr>
               
-                        <tr>
+                      <tr>
                           <td rowspan="3" class="font-weight">Mata Kuliah Syarat </td>
                           <td>1 </td>
-                          <td colspan="6">SDA </td> 
+                          <td colspan="8">SDA </td> 
                       </tr>
                       <tr>
                           <td>2 </td>
-                          <td colspan="6">DASPRO </td> 
+                          <td colspan="8">DASPRO </td> 
                       </tr>
                       <tr>
                           <td>3 </td>
-                          <td colspan="6">PBO </td> 
+                          <td colspan="8">PBO </td> 
                       </tr>  
                       </tbody>
                     </table>
