--- a/views/admin/coursesPlan.ejs
+++ b/views/admin/coursesPlan.ejs
@@ -38,14 +38,14 @@
         <td class="text-center"><%= item.semester %></td>
         <td class="text-center"><%= item.rev %></td>
         <td class="text-center">
-          <a onclick="window.open('/admin/coursesPlan/<%= item.id%>/1')"class="link-primary"><i class='bx bx-sm bx-printer bx-border'></i></a>
+          <a onclick="window.open('/admin/coursesPlan/<%= item.id%>/<%= item.rev %>/cetakRps')"class="link-primary"><i class='bx bx-sm bx-printer bx-border'></i></a>
           </td>
         <td class="text-center">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Details
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/admin/coursesPlan/<%= item.id%>">Kelola Dosen</a>
+              <a class="dropdown-item" href="/admin/coursesPlan/<%= item.id%>/<%= item.rev %>">Kelola Dosen</a>
               <a class="dropdown-item" href="/admin/petaCplCpmk/<%= item.id%>">Peta CPMK ke CPL</a>
               <a class="dropdown-item" href="/admin/persentaseRps">Persentase RPS</a>
             </div>
